--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --red: #fc618d;
+  --orange: #fd9353;
+  --yellow: #fce566;
+  --green: #7bd88f;
+  --blue: #5ad4e6;
+  --purple: #948ae3;
+
+  --base0: #131313;
+  --base1: #191919;
+  --base2: #222222;
+  --base3: #363537;
+  --base4: #525053;
+  --base5: #69676c;
+  --base6: #8b888f;
+  --base7: #bab6c0;
+  --base8: #f7f1ff;
+
+  --base8x0c: #2b2b2b;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root, div {
+  margin: 0;
+  height: 100%;
+}
+
+* {
+  font-family: 'Inconsolata';
 }
