Big/Profile card component added; changed display to flex

--- a/frontend/src/pages/homepage.css
+++ b/frontend/src/pages/homepage.css
@@ -28,3 +28,17 @@ button {
 #login {
     background-color: var(--purple)
 }
+
+.Homepage {
+    width: 30%;
+    height: 70%;
+    margin: 0 auto;
+}
+
+.InputForm {
+    height: 100%;
+}
+
+form {
+    height: 100%;
+}
