--- a/frontend/src/components/slideout.css
+++ b/frontend/src/components/slideout.css
@@ -1,20 +1,24 @@
-i {
+#openClose {
     width: 40px;
     height: 40px;
     font-size: 24px;
     color: var(--base1);
+    display: flex;
 }
 
 .slider-container {
     padding: 0;
     margin: 0;
     height: 100%;
-    display: inline;
     float: left;
+    display: flex;
 }
 
 #slider-content {
     background-color: var(--base6);
     height: 100%;
-    min-width: 20vw;
+
+    width: 20vw;
+    min-width: 200px;
+    max-width: 500px;
 }
