--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,10 @@ html, body, #root {
   height: 100%;
 }
 
+#root:first-child {
+  width: 100%;
+}
+
 * {
   padding: 0;
   font-family: 'Inconsolata';
