--- a/frontend/src/pages/feed/feed.css
+++ b/frontend/src/pages/feed/feed.css
@@ -1,33 +1,33 @@
 .entry {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-    background-color: #bab6c0;
-    border: 1px solid black;
-    border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  background-color: #bab6c0;
+  border: 1px solid black;
+  border-radius: 12px;
 }
 
 .entry h4 {
-    padding: 10px 5px;
-    font-weight:bold;
-    background-color: #948AE3;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
+  padding: 10px 5px;
+  font-weight: bold;
+  background-color: #948ae3;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
 
 img {
-    width: 50%;
-    height: 50%;
+  width: 50%;
+  height: 50%;
 }
 
 .image-container {
-    width: 100%;
-    background-color: #948AE3;
+  width: 100%;
+  background-color: #948ae3;
 }
 
-#feed-container { 
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+#feed-container {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
