--- a/frontend/src/pages/homepage/home.css
+++ b/frontend/src/pages/homepage/home.css
@@ -1,42 +1,42 @@
 .input {
-    margin: 0 auto;
-    display: block;
-    background: none;
-    border: none;
-    border-bottom: 1px solid var(--purple);
-    padding-top: 20px;
-    font-size: 18px;
+  margin: 0 auto;
+  display: block;
+  background: none;
+  border: none;
+  border-bottom: 1px solid var(--purple);
+  padding-top: 20px;
+  font-size: 18px;
 }
 .input:focus {
-    outline: none;
+  outline: none;
 }
 
 .title {
-    color: var(--purple);
-    margin: 0;
-    padding-bottom: 8px;
+  color: var(--purple);
+  margin: 0;
+  padding-bottom: 8px;
 }
 
 button {
-    margin: 12px;
-    margin-top: 30px;
-    padding: 8px 15px 8px 15px;
-    border: none;
-    border-radius: 2px;
+  margin: 12px;
+  margin-top: 30px;
+  padding: 8px 15px 8px 15px;
+  border: none;
+  border-radius: 2px;
 }
 
 #login {
-    background-color: var(--purple)
+  background-color: var(--purple);
 }
 
 .Homepage {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .InputForm {
-    height: 100%;
+  height: 100%;
 }
 
 form {
-    height: 100%;
+  height: 100%;
 }
