--- a/frontend/src/pages/add-listing/add-listing.css
+++ b/frontend/src/pages/add-listing/add-listing.css
@@ -4,6 +4,7 @@
 }
 
 #add-listing-form h2 {
+    background-color: var(--base7);
     padding-bottom: 10px;
     margin: 0;
 }
@@ -15,4 +16,9 @@
 
 #add-listing-form ul * {
     width: 100%;
+}
+
+#add-listing-form button {
+    width: 50%;
+    margin-top: 10px;
 }
