Slideout goes fullscreen when screen small

--- a/frontend/src/components/slideout/slideout.css
+++ b/frontend/src/components/slideout/slideout.css
@@ -22,3 +22,9 @@
   min-width: 200px;
   max-width: 500px;
 }
+
+@media only screen and (max-width: 500px) {
+  #slider-content {
+    width: 90vw;
+  }
+}
