--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@ div {
   padding-top: 25vh;
 }
 
-.bi-person, .bi-rss-fill {
+.bi-person, .bi-rss, .bi-rss-fill {
   font-size: 24px;
   float: right;
   color: var(--purple);
