Moved firebase calls to helper file for improved readability

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,12 @@ div {
   background-color: var(--base7);
 }
 
-.Homepage, #profile {
+.Homepage {
   padding-top: 25vh;
+}
+
+#profile {
+  padding-top: 10vh;
 }
 
 a .bi {
