--- a/frontend/src/pages/feed/feed.css
+++ b/frontend/src/pages/feed/feed.css
@@ -66,3 +66,20 @@ hr {
   padding-top: 4px;
   float: left;
 }
+
+#skills li {
+  list-style: none;
+  display: inline-block;
+  padding: 6px 10px 6px 10px;
+  margin: 5px;
+  background: var(--base8);
+  border-radius: 5px;
+}
+
+.liked {
+  color: var(--green) !important;
+}
+
+.disliked {
+  color: var(--red) !important;
+}
