--- a/frontend/src/pages/feed/feed.css
+++ b/frontend/src/pages/feed/feed.css
@@ -83,3 +83,23 @@ hr {
 .disliked {
   color: var(--red) !important;
 }
+
+.userData {
+  margin: 10px;
+  padding: 10px;
+  border-bottom: 1px solid black;
+  background-color: var(--purple);
+}
+
+.userData p {
+  padding: 0;
+  margin: 5px;
+}
+
+.bi-hand-thumbs-up-fill {
+  width: fit-content  !important;
+}
+
+.bi-hand-thumbs-up-fill p {
+  display: inline;
+}
