--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -110,31 +110,51 @@ input[type='radio']:checked:after {
 	background-color: var(--base7);
 	align-content: center;
 }
-
 #navbar i {
-	border-radius: 0;
 	margin: auto;
 	width: fit-content;
 	height: 40px;
 	display: inline-block;
 	padding-left: 8px;
 	padding-right: 8px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	font-size: 25px;
+	background-color: white;
+	color: #9002FF;
+	transition-duration: 0.4s;
+	border: none;
+	border-radius: 2px;
+	filter: drop-shadow(2.5px 2px 2px grey)
+}
+#navbar i:hover {
+	background-color: #9002FF;
+	color: white;
+}
+#navbar i:active {
+	background-color: #948AE3;
+	color: white;
+	transform: scale(0.9);
 }
 #navbar i p {
 	display: inline;
 	font-size: 14px;
 }
-
 #navbar a {
 	padding-left: 1px;
 	padding-top: 4px;
 	margin: auto;
 	height: 40px;
 	display: inline-block;
+	padding-right: 8px;
 }
 
-@media (max-width: 450px) 
-{ 
+.hidden_item{
+	display: none;
+}
+
+@media (max-width: 450px) {
 	#navbar a i p {
 		display: none;
 	}
