Added employer feed filter, resolved errors, added CSS to error messages

--- a/frontend/src/components/input-form/input-form.css
+++ b/frontend/src/components/input-form/input-form.css
@@ -5,3 +5,10 @@
 ul {
   display: block !important;
 }
+
+.inputError {
+  background-color: var(--red);
+  border-radius: 10px;
+  padding: 5px;
+  margin-top: 5px;
+}
