Navbar shadow and profile pic border

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,6 +109,7 @@ input[type='radio']:checked:after {
 	height: 50px;
 	background-color: var(--base7);
 	align-content: center;
+	filter: drop-shadow(2.5px 2px 2px grey)
 }
 #navbar i {
 	margin: auto;
