--- a/frontend/src/pages/profile/profile.css
+++ b/frontend/src/pages/profile/profile.css
@@ -5,7 +5,7 @@
     height: 200px;
     width: 200px;
     border-image-width: 10px;
-	border: 2px dashed white;
+	border: 6px double #9002FF;
 }
 
 #uploadInput {
