Added basic loading indicators to feed page and profile iamge

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -156,9 +156,12 @@ input[type='radio']:checked:after {
 	display: inline-block;
 	padding-right: 8px;
 }
-
 .hidden_item{
 	display: none;
+}
+.loading {
+	color: #9002FF;
+	margin: 0 auto;
 }
 
 @media (max-width: 540px) {
