--- a/frontend/src/pages/forgot-password/forgot-password.css
+++ b/frontend/src/pages/forgot-password/forgot-password.css
@@ -8,3 +8,13 @@
     top:0;
     left: 0;
 }
+
+.Forgotpassword {
+    display: block;
+    margin: 0 auto;
+    background:none;
+    border:none;
+    padding:0;
+    cursor: pointer;
+    font-size: small;
+}
