--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,31 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@700&display=swap');
+
 div {
-  text-align: center;
-  background-color: var(--white);
+	text-align: center;
+	background-color: var(--white);
 }
 
 .Homepage {
-  padding-top: 25vh;
+	padding-top: 25vh;
 }
 
 #profile {
-  padding-top: 10vh;
+	padding-top: 10vh;
 }
 
 a .bi {
-  font-size: 24px;
-  color: var(--purple);
-  margin: 5px 8px 0 0;
-  background: var(--base8);
-  border-radius: 50px;
-  width: 35px;
-  height: 35px;
+	font-size: 24px;
+	color: var(--purple);
+	margin: 5px 8px 0 0;
+	background: var(--base8);
+	border-radius: 50px;
+	width: 35px;
+	height: 35px;
 }
 
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-p, i, li, label, td, th, button {
+
+p,
+i,
+li,
+label,
+td,
+th,
+button {
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 }
 
@@ -55,10 +67,12 @@ h1 {
 	border-radius: 2px;
 	filter: drop-shadow(2.5px 2px 2px grey)
 }
+
 button:hover {
 	background-color: #9002FF;
 	color: white;
 }
+
 button:active {
 	background-color: #948AE3;
 	color: white;
@@ -83,15 +97,18 @@ input[type="radio"] {
 	border: none;
 	border-radius: 2px;
 }
+
 input[type="radio"]:hover {
 	background-color: #9002FF;
 	color: #9002FF;
 }
+
 input[type="radio"]:active {
 	background-color: #948AE3;
 	color: #948AE3;
 	transform: scale(0.8);
 }
+
 input[type='radio']:checked:after {
 	width: 20px;
 	height: 20px;
@@ -112,7 +129,9 @@ input[type='radio']:checked:after {
 	filter: drop-shadow(2.5px 2px 2px grey);
 	min-height: fit-content;
 }
-#navbar i, .back {
+
+#navbar i,
+.back {
 	margin: auto;
 	width: fit-content;
 	height: 95%;
@@ -132,21 +151,25 @@ input[type='radio']:checked:after {
 	filter: drop-shadow(2.5px 2px 2px grey);
 	min-width: 120px;
 }
+
 #navbar i:hover {
 	background-color: #9002FF;
 	color: white;
 }
+
 #navbar i:active {
 	background-color: #948AE3;
 	color: white;
 	transform: scale(0.9);
 }
+
 #navbar i p {
 	display: inline;
 	font-size: 14px;
 	position: relative;
 	top: -3px;
 }
+
 #navbar a {
 	padding-left: 1px;
 	padding-top: 2px;
@@ -156,15 +179,18 @@ input[type='radio']:checked:after {
 	display: inline-block;
 	padding-right: 8px;
 }
-.hidden_item{
+
+.hidden_item {
 	display: none;
 }
+
 .loading {
 	color: #a383bb;
 	margin: 0 auto;
 }
 
-#navbar .back, .back {
+#navbar .back,
+.back {
 	width: 30px;
 	margin-right: 12px;
 	min-width: fit-content;
@@ -174,6 +200,7 @@ input[type='radio']:checked:after {
 	#navbar a i p {
 		display: none;
 	}
+
 	#navbar a i {
 		min-width: 60px;
 	}
