--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -138,7 +138,7 @@ input[type='radio']:checked:after {
 	display: inline-block;
 	padding-left: 8px;
 	padding-right: 8px;
-	padding-top: 4px;
+	padding-top: 6px;
 	text-align: center;
 	justify-content: center;
 	align-items: center;
@@ -204,4 +204,7 @@ input[type='radio']:checked:after {
 	#navbar a i {
 		min-width: 60px;
 	}
+}
+#navbar i, .back{
+	padding-top: 6px;
 }
